# bmstu-iu7-5sem-AA

./: LICENSE  README.md
hw/: tf_alg.c
lab_01/: CMakeLists.txt  main.cpp
lab_01/doc/: aa_lab_01.tex  lab_01.tex  packages.tex
lab_01/doc/csv/: memory.csv
lab_01/doc/img/: algoritms.drawio
lab_01/docs/: .gitignore  conclusion.tex  construction.tex  lib.tex  packages.tex  report.bbl  report.blg  report.tex  report.toc  research.tex  technological.tex  title.tex
lab_01/docs/img/: .$algoritms.drawio.dtmp  algoritms.drawio
lab_01/docs/parts/: 00-packages.tex  01-title.tex  03-introduction.tex  04-analysis.tex  05-construction.tex  06-technological.tex  07-research.tex  08-conclusion.tex  analysis.tex  conclusion.tex  construction.tex  introduction.tex  lib.bib  lib.tex  research.tex  technological.tex
lab_01/inc/: algorithms.h  cpu_time.h  print_mtr_lev.h
lab_01/src/: .gitignore  CMakeLists.txt  algorithms.cpp  allocate.cpp  allocate.h  cpu_time.cpp  main.cpp  memory.cpp  memory.h  print_mtr_lev.cpp
lab_02/: CMakeLists.txt  main.cpp
lab_03/: CMakeLists.txt  main.cpp
lab_04/: CMakeLists.txt  main.c
lab_05/: CMakeLists.txt  main.cpp
lab_05/docs/csv/: times.csv
lab_05/docs/img/: schemes.drawio
lab_05/docs/parts/: 01-title.tex  03-introduction.tex  04-analysis.tex  05-construction.tex  06-technological.tex  07-research.tex  08-conclusion.tex  lib.bib
lab_05/inc/: conveyor.h  measure.h  mtr_op.h  read_size.h
lab_05/src/: conveyor.cpp  measure.cpp  mtr_op.cpp  read_size.cpp
lab_07/: .gitignore  dish.py  dishes.json  main.py  terms.py  utils.py
(+134 files in other folders)
